src/objects/Rates__c.object
<CustomObject>
    <fields>
        <fullName>Committed_Rate__c</fullName>
        <label>Committed Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Graphic_Designer_Rate__c</fullName>
        <label>Graphic Designer Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Laboratory_Technologist_Rate__c</fullName>
        <label>Laboratory Technologist Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Level_1A__c</fullName>
        <label>Rate Level 1A</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Level_1B__c</fullName>
        <label>Rate Level 1B</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Level_2A__c</fullName>
        <label>Rate Level 2A</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Level_2B__c</fullName>
        <label>Rate Level 2B</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Level_3A__c</fullName>
        <label>Rate Level 3A</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Level_3B__c</fullName>
        <label>Rate Level 3B</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Secretary_Rate__c</fullName>
        <label>Secretary Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Rate</label>
    <nameField>
        <label>Rates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>